# DNDPlayerHelper

./: .gitignore  README.md
backend/: .env  alembic.ini  process_openapi.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 2532131313f8_adding_char_and_race_tables.py  2b03739cbcec_add_resistances.py  32eb115392e3_race.py  44fab12eac11_functional_change.py  4a90a1ceb47a_action_table.py  516db2e61f02_adding_foreing_key_to_class.py  912d84fe812e_adding_foreing_key_char_for_real.py  a13ce5a8a534_character_sheet_table.py  c9f76b5645b5_expansion_table.py  cc84658ae14b_following_name_conventions_for_race.py  e65097fab244_added_action.py  e77393c032cf_first_try.py  eb95259471ae_adding_foreing_key_character.py  eeddf834afdb_damage_type.py  f6e564e57a57_start_of_constraints.py
backend/src/: database.py  example.py  main.py  routes.py
backend/src/character_sheet/: SocketManager.py  routes.py
backend/src/character_sheet/initial_data/: insert_into_db.py
backend/src/character_sheet/models/: character_resistance.py  character_sheet.py  damage_type.py  expansion.py  race.py  race_resistance.py  sheet_socket_message.py
backend/src/core/: database.py  map.py  models.py  stream.py
backend/src/game/data/: expansion.json  insert_into_db.py
backend/src/game/models/: __init__.py  abillity.py  action.py  damage_type.py  expansion.py  game_entity.py  race.py
backend/src/models/: __init__.py  char_class.py  character_resistance.py  character_sheet.py  damage_type.py  race.py
backend/src/util/: decorators.py
docker/: docker-compose.yaml
(+47 files in other folders)
