[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["robbe <robbeheirman@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^1.4.41"
alembic = "^1.12.0"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
