[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["robbe <robbeheirman@msn.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
alembic = "^1.12.0"
websockets = "^12.0"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "src.main:start"
generate_openapi = "process_openapi:main"
